--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -659,7 +659,7 @@ id='logout'>
                   error.style.display = 'none';
                   tableContainer.style.display = 'none';
       
-                  axios.get('http://localhost:4000/candidate/birthday', {
+                  axios.get('http://nemonode.ivistaz.co:8000/candidate/birthday', {
                       params: { date },
                       headers: { "Authorization": token }
                   })
