--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -67,7 +67,7 @@
     const fetchQueries = async () => {
       try {
         const token = localStorage.getItem('token');
-        const response = await axios.get('http://nemonode.ivistaz.co:8000/others/query-fetch', {
+        const response = await axios.get('http://nemonode.ivistaz.co/others/query-fetch', {
           headers: {
             'Authorization': token
           }
@@ -110,7 +110,7 @@
 
       try {
         const token = localStorage.getItem('token');
-        await axios.post('http://nemonode.ivistaz.co:8000/others/query', {
+        await axios.post('http://nemonode.ivistaz.co/others/query', {
           categories,
           description,
           status,
@@ -165,7 +165,7 @@
 
       try {
         const token = localStorage.getItem('token');
-        await axios.put(`http://nemonode.ivistaz.co:8000/others/query/${queryId}`, {
+        await axios.put(`http://nemonode.ivistaz.co/others/query/${queryId}`, {
           categories: editCategories,
           description: editDescription,
           status: editStatus,
