--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -715,7 +715,7 @@ id='logout'>
                     const token = localStorage.getItem('token');
               
                     // Fetch discussion counts
-                    const discussionCountsResponse = await fetch('http://nemonode.ivistaz.co/candidate/discussion-count', {
+                    const discussionCountsResponse = await fetch('https://nemonode.ivistaz.co/candidate/discussion-count', {
                       headers: { "Authorization": token }
                     });
                     const discussionCountsData = await discussionCountsResponse.json();
@@ -726,7 +726,7 @@ id='logout'>
 
               
                     // Fetch call count
-                    const callCountResponse = await fetch('http://nemonode.ivistaz.co/candidate/call-count', {
+                    const callCountResponse = await fetch('https://nemonode.ivistaz.co/candidate/call-count', {
                       headers: { "Authorization": token }
                     });
                     const callCountData = await callCountResponse.json();
