--- a/views/public/html/reminder-document.html
+++ b/views/public/html/reminder-document.html
@@ -655,7 +655,7 @@ id='logout'>
                       loader.style.display = 'block';
                       error.style.display = 'none';
           
-                      let url = 'http://nemonode.ivistaz.co/candidate/expiry-date';
+                      let url = 'https://nemonode.ivistaz.co/candidate/expiry-date';
                       let requestData = {}; // Initialize request data object
           
                       if (selectedDate) {
