--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -241,7 +241,7 @@
                       throw new Error('Please select at least one field.');
                   }
   
-                  const endpoint = 'http://localhost:4000/candidate/reports/view-new-profile';
+                  const endpoint = 'https://nemonode.ivistaz.co/candidate/reports/view-new-profile';
                   const token = localStorage.getItem('token');
                   const response = await axios.post(endpoint, { selectedFields }, { headers: { "Authorization": token } });
   
