--- a/views/public/html/reminder-document.html
+++ b/views/public/html/reminder-document.html
@@ -699,7 +699,7 @@
     loader.style.display = 'block';
     error.style.display = 'none';
 
-    let url = 'http://localhost:4000/candidate/expiry-date';
+    let url = 'https://nemonode.ivistaz.co/candidate/expiry-date';
     let requestData = {}; // Initialize request data object
 
     if (selectedDate) {
