--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -650,7 +650,7 @@
                     async function fetchData(selectedDate) {
                         try {
                             const token = localStorage.getItem('token');
-                            const response = await axios.get('http://localhost:4000/candidate/reminder', {
+                            const response = await axios.get('https://nemonode.ivistaz.co/candidate/reminder', {
                                 headers: { "Authorization": token },
                                 params: { date: selectedDate }
                             });
