--- a/views/public/html/add-vendor.html
+++ b/views/public/html/add-vendor.html
@@ -831,13 +831,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row mb-3">
+                        <div class="row mb-3" style="display: none;">
                             <div class="col-6">
                                 <label class="form-check-label" for="u_user_management">User management</label>
                             </div>
                             <div class="col-6">
                                 <div class="form-check">
-                                    <input type="checkbox" id="u_user_management" name="u_user_management" class="form-check-input">
+                                    <input type="hidden" id="u_user_management" name="u_user_management" class="form-check-input">
                                 </div>
                             </div>
                         </div>
