--- a/views/public/html/edit-user.html
+++ b/views/public/html/edit-user.html
@@ -826,7 +826,7 @@
                               <input type="checkbox" id="u_export" name="u_export" class="form-check-input">
                               <label class="form-check-label" style="font-size: 12px;" for="u_export">Export</label>
                           </div>
-                          <div class="col-md-3 form-check">
+                          <div class="col-md-3 form-check " id="userManage">
                               <input type="checkbox" id="u_user_management" name="u_user_management" class="form-check-input">
                               <label class="form-check-label" style="font-size: 12px;" for="u_user_management">User management</label>
                           </div>
