--- a/views/public/html/add-user.html
+++ b/views/public/html/add-user.html
@@ -659,7 +659,11 @@
                               </thead>
                               <tbody id="user-list"></tbody>
                           </table>
-                          <div id="pagination-controls"></div>
+                          <nav aria-label="Page navigation">
+                            <ul class="pagination justify-content-center" id="pagination-controls">
+                                <!-- Pagination links will be displayed here -->
+                            </ul>
+                        </nav>
 
                       </div>
                       
