--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -44,7 +44,7 @@
         async function populateCandidatesTable() {
             try {
                 const token = localStorage.getItem('token');
-                const response = await axios.get('https://nemonode.ivistaz.co/candidate/view-candidate', {
+                const response = await axios.get('http://localhost:4000/candidate/view-candidate', {
                     headers: { "Authorization": token }
                 });
                 const responseData = response.data;
