--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -390,7 +390,7 @@
               </ul>
             </span>
 
-            <li class="menu-header small text-uppercase" id="vendorManagement" style="display: none;">
+            <!-- <li class="menu-header small text-uppercase" id="vendorManagement" style="display: none;">
               <span class="menu-header-text">Vendor Management</span>
             </li>
             <li class="menu-item" id="vendorManagementSections" style="display: none;">
@@ -411,7 +411,7 @@
                 </li>
                 
               </ul>
-            </li>
+            </li> -->
 
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Candidate Management</span>
@@ -771,7 +771,7 @@
                     const token = localStorage.getItem('token');
               
                     // Fetch discussion counts
-                    const discussionCountsResponse = await fetch('https://nemonode.ivistaz.co/candidate/discussion-count', {
+                    const discussionCountsResponse = await fetch('http://localhost:4000/candidate/discussion-count', {
                       headers: { "Authorization": token }
                     });
                     const discussionCountsData = await discussionCountsResponse.json();
@@ -782,7 +782,7 @@
 
               
                     // Fetch call count
-                    const callCountResponse = await fetch('https://nemonode.ivistaz.co/candidate/call-count', {
+                    const callCountResponse = await fetch('http://localhost:4000/candidate/call-count', {
                       headers: { "Authorization": token }
                     });
                     const callCountData = await callCountResponse.json();
@@ -801,7 +801,7 @@
       async function populateCandidatesTable() {
           try {
               const token = localStorage.getItem('token');
-              const response = await axios.get('https://nemonode.ivistaz.co/candidate/view-candidate', {
+              const response = await axios.get('http://localhost:4000/candidate/view-candidate', {
                   headers: { "Authorization": token }
               });
               const responseData = response.data;
