--- a/views/public/html/reminder-document.html
+++ b/views/public/html/reminder-document.html
@@ -670,6 +670,22 @@
             <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         
             <script>
+               document.getElementById("logout").addEventListener("click", function() {
+    // Display the modal with initial message
+    localStorage.clear();
+    var myModal = new bootstrap.Modal(document.getElementById('logoutModal'));
+    myModal.show();
+
+    // Change the message and spinner after a delay
+    setTimeout(function() {
+        document.getElementById("logoutMessage").textContent = "Shutting down all sessions...";
+    }, 1000);
+
+    // Redirect after another delay
+    setTimeout(function() {
+        window.location.href = "loginpage.html";
+    }, 2000);
+});
               function decodeToken(token) {
     // Implementation depends on your JWT library
     // Here, we're using a simple base64 decode
@@ -699,7 +715,7 @@
     loader.style.display = 'block';
     error.style.display = 'none';
 
-    let url = 'https://nemonode.ivistaz.co/candidate/expiry-date';
+    let url = 'http://localhost:4000/candidate/expiry-date';
     let requestData = {}; // Initialize request data object
 
     if (selectedDate) {
