--- a/views/public/html/seaserviceedit.html
+++ b/views/public/html/seaserviceedit.html
@@ -700,13 +700,29 @@
                     </form>
                   </div>
                   <script>
+                     document.getElementById("logout").addEventListener("click", function() {
+    // Display the modal with initial message
+    localStorage.clear();
+    var myModal = new bootstrap.Modal(document.getElementById('logoutModal'));
+    myModal.show();
+
+    // Change the message and spinner after a delay
+    setTimeout(function() {
+        document.getElementById("logoutMessage").textContent = "Shutting down all sessions...";
+    }, 1000);
+
+    // Redirect after another delay
+    setTimeout(function() {
+        window.location.href = "loginpage.html";
+    }, 2000);
+});
                             async function editSeaService() {
     const urlParams = new URLSearchParams(window.location.search);
     const id = urlParams.get('memId');
     console.log(id)
     try {
         const token = localStorage.getItem('token');
-        const response = await axios.get(`https://nemonode.ivistaz.co/candidate/get-sea/${id}`, { headers: { "Authorization": token } });
+        const response = await axios.get(`http://localhost:4000/candidate/get-sea/${id}`, { headers: { "Authorization": token } });
         console.log(response)
         const seaService = response.data.editSea[0];
         console.log("edit response", response.data)
@@ -757,7 +773,7 @@ document.addEventListener('DOMContentLoaded', async function () {
         try {
             // Send PUT request to update sea service data
             const token = localStorage.getItem('token');
-            const response = await axios.put(`https://nemonode.ivistaz.co/candidate/edit-sea-service/${id}`, formData, { headers: { "Authorization": token } });
+            const response = await axios.put(`http://localhost:4000/candidate/edit-sea-service/${id}`, formData, { headers: { "Authorization": token } });
             console.log(response);
             alert('Sea Service record updated successfully!');
             // editSeaServiceForm.reset();
