--- a/views/public/html/seaservicetable.html
+++ b/views/public/html/seaservicetable.html
@@ -815,7 +815,7 @@
                 async function fetchAndDisplaySeaService(candidateId) {
                     try {
                         const token = localStorage.getItem('token');
-                        const response = await axios.get(`https://nemonode.ivistaz.co/candidate/get-sea-service/${candidateId}`, {
+                        const response = await axios.get(`http://localhost:4000/candidate/get-sea-service/${candidateId}`, {
                             headers: { "Authorization": token }
                         });
             
@@ -858,7 +858,7 @@
                     if (confirm('Are you sure you want to delete this sea service record?')) {
                         try {
                             const token = localStorage.getItem('token');
-                            await axios.delete(`https://nemonode.ivistaz.co/candidate/delete-sea-service/${id}`, { headers: { "Authorization": token } });
+                            await axios.delete(`http://localhost:4000/candidate/delete-sea-service/${id}`, { headers: { "Authorization": token } });
                             // Remove the corresponding row from the table
                             const seaServiceRow = document.getElementById(`seaServiceRow-${id}`);
                             seaServiceRow.remove();
@@ -896,7 +896,7 @@
         try {
             const token = localStorage.getItem('token');
             const id = localStorage.getItem('memId');
-            const response = await axios.post(`https://nemonode.ivistaz.co/candidate/sea-service/${id}`, formData, { headers: { "Authorization": token } });
+            const response = await axios.post(`http://localhost:4000/candidate/sea-service/${id}`, formData, { headers: { "Authorization": token } });
             console.log(response.data);
             alert('Sea Service record added successfully!');
             seaServiceForm.reset();
@@ -906,7 +906,22 @@
         }
     });
 
+    document.getElementById("logout").addEventListener("click", function() {
+    // Display the modal with initial message
+    localStorage.clear();
+    var myModal = new bootstrap.Modal(document.getElementById('logoutModal'));
+    myModal.show();
 
+    // Change the message and spinner after a delay
+    setTimeout(function() {
+        document.getElementById("logoutMessage").textContent = "Shutting down all sessions...";
+    }, 1000);
+
+    // Redirect after another delay
+    setTimeout(function() {
+        window.location.href = "loginpage.html";
+    }, 2000);
+});
                 
             </script>
             
