--- a/views/public/html/edit-candidate.html
+++ b/views/public/html/edit-candidate.html
@@ -458,7 +458,7 @@
                 </li>
               </ul></li>
 
-              <li class="menu-header small text-uppercase" id="vendorManagementSection" style="display: none;">
+              <!-- <li class="menu-header small text-uppercase" id="vendorManagementSection" style="display: none;">
                 <span class="menu-header-text">Vendor Management</span>
               </li>
               
@@ -478,7 +478,7 @@
                       <div data-i18n="Account">Add</div>
                     </a>
                   </li>
-                </ul></li>
+                </ul></li> -->
             
 
            
