--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -733,7 +733,7 @@
                                 
                             </div>  
                             <div class="card p-5  mt-3 w-100">
-                              <h6 class="fw-bolder ">Top available candidates</h6>
+                              <h6 class="fw-bolder ">Top available nemo candidates</h6>
                             <div id="rankCharts" ></div>
                             <p class="mt-3 mb-0 pb-0"><a href="availableCandidates.html">Click here for detailed data</a></p>
 
